[package]
name = "dex-trade-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "old"
path = "src/old/main.rs"

[[bin]]
name = "new"
path = "src/new/main.rs"

[dependencies]
ethabi = "18.0.0"
hex = "0.4.3"
regex = "1.8.1"
serde_json = "1.0.96"
tokio = "1.27.0"
web3 = "0.18.0"
